{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 271,
  "lineage": "98a0018b-284f-d019-9db1-10815b950dae",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409396177599:security-group/sg-00d3e9031275cea41",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-00d3e9031275cea41",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-088ecea7920d51795"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_env_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409396177599:internet-gateway/igw-01e0b208eaebed3ab",
            "id": "igw-01e0b208eaebed3ab",
            "owner_id": "409396177599",
            "vpc_id": "vpc-088ecea7920d51795"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409396177599:route-table/rtb-00de66ad377785678",
            "id": "rtb-00de66ad377785678",
            "owner_id": "409396177599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e0b208eaebed3ab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088ecea7920d51795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test",
            "aws_internet_gateway.test_env_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0296f669dfb568f47",
            "route_table_id": "rtb-00de66ad377785678",
            "subnet_id": "subnet-0955b15edd748ca64"
          },
          "dependencies": [
            "aws_internet_gateway.test_env_gw",
            "aws_route_table.route_table",
            "aws_subnet.public",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409396177599:subnet/subnet-0269e80b14d5a7fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0269e80b14d5a7fbd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409396177599",
            "vpc_id": "vpc-088ecea7920d51795"
          },
          "dependencies": [
            "aws_vpc.test"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409396177599:subnet/subnet-0955b15edd748ca64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0955b15edd748ca64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409396177599",
            "vpc_id": "vpc-088ecea7920d51795"
          },
          "dependencies": [
            "aws_vpc.test"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409396177599:vpc/vpc-088ecea7920d51795",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c160d81a92481475",
            "default_route_table_id": "rtb-022ede5b369022c56",
            "default_security_group_id": "sg-00d3e9031275cea41",
            "dhcp_options_id": "dopt-52a0ea29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-088ecea7920d51795",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-022ede5b369022c56",
            "owner_id": "409396177599"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409396177599:vpc-endpoint/vpce-0323e10ba251ed49b",
            "dns_entry": [
              {
                "dns_name": "vpce-0323e10ba251ed49b-ffnzah71.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0323e10ba251ed49b-ffnzah71-us-east-1b.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0323e10ba251ed49b-ffnzah71-us-east-1a.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "execute-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05437391C0FDWTTGSX4M"
              },
              {
                "dns_name": "*.execute-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05437391C0FDWTTGSX4M"
              }
            ],
            "id": "vpce-0323e10ba251ed49b",
            "network_interface_ids": [
              "eni-0018e6f537026836e",
              "eni-0db5c2a35c4116539"
            ],
            "owner_id": "409396177599",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00d3e9031275cea41"
            ],
            "service_name": "com.amazonaws.us-east-1.execute-api",
            "state": "available",
            "subnet_ids": [
              "subnet-0269e80b14d5a7fbd",
              "subnet-0955b15edd748ca64"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-088ecea7920d51795"
          },
          "dependencies": [
            "aws_vpc.test",
            "data.aws_security_group.test",
            "data.aws_vpc_endpoint_service.test",
            "aws_subnet.private",
            "aws_subnet.public"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}